# GFX_Lab3

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
sources/: Map.cpp  Map.h  MyApp.cpp  Path.cpp  Path.h  Station.cpp  Station.h  framework.cpp  framework.h
